/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    `java-library`
    id("com.gradleup.shadow") version "9.4.1"
}

repositories {
    maven("https://repo.papermc.io/repository/maven-public/")
    mavenCentral()
}

dependencies {
    compileOnly("com.velocitypowered:velocity-api:3.5.0-SNAPSHOT")
    annotationProcessor("com.velocitypowered:velocity-api:3.5.0-SNAPSHOT")
    implementation("lol.hyper:github-release-api:1.0.5")
    implementation("org.bstats:bstats-velocity:3.2.1")
}

group = "lol.hyper"
version = "1.0.9"
description = "VelocityBlockVersion"
java.sourceCompatibility = JavaVersion.VERSION_21

tasks.shadowJar {
    archiveClassifier.set("")
    relocate("lol.hyper.githubreleaseapi", "lol.hyper.velocityblockversion.shaded.githubreleaseapi")
    relocate("org.bstats", "lol.hyper.velocityblockversion.shaded.bstats")
}

val pluginVersion = version.toString()

tasks.processResources {
    filteringCharset = "UTF-8"

    val props = mapOf("version" to pluginVersion)
    inputs.properties(props)

    filesMatching("velocity-plugin.json") {
        expand(props)
    }
}